--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "clean-webpack-plugin": "^3.0.0"
   }
 }
