--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-  "name": "quickstart-v2",
-  "version": "1.0.0",
-  "private": true,
-  "description": "template for personal projects for quick setup",
-  "main": "main.js",
+  "name": "elder-scrolls-name-generator",
+  "version": "2.0.0",
+  "private": false,
+  "description": "Roll names for characters that match name patterns from The Elder Scrolls.",
+  "main": "main.tsx",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js --open",
+    "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BeckyPollard/quickstart-v2.git"
-  },
-  "keywords": [],
   "author": "Becky Pollard",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BeckyPollard/quickstart-v2/issues"
-  },
-  "homepage": "https://github.com/BeckyPollard/quickstart-v2#readme",
-  "devDependencies": {
-    "css-loader": "^3.5.3",
-    "file-loader": "^6.0.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
-  },
   "dependencies": {
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "axios": ">=0.21.1",
+    "clean-webpack-plugin": "^4.0.0",
     "cheerio": "^1.0.0-rc.3",
-    "clean-webpack-plugin": "^3.0.0"
+    "css-loader": "^6.6.0",
+    "eslint": "^8.9.0",
+    "file-loader": "^6.0.0",
+    "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.3",
+    "node-sass": "^7.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sass-loader": "^12.6.0",
+    "source-map": "^0.7.3",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "webpack-merge": "^5.8.0"
   }
 }
